--- a/static/register.css
+++ b/static/register.css
@@ -1,214 +1,306 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+:root {
+  --wahd: #007585;
+  --joj: #090114;
+  --tlata: #6a2fc7;
+  --jdid: #00c8db;
+  --bg: #0a0a0a;
+  --bg2: #4285f4;
+  --akhdar: #0afb26;
+  --red: #0ef;
+}
 
+.input-box input:-webkit-autofill,
+.input-box input:-webkit-autofill:hover, 
+.input-box input:-webkit-autofill:focus,
+.input-box input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
+  -webkit-text-fill-color: white !important;
+  transition: background-color 5000s ease-in-out 0s;
+  caret-color: white;
+}
+
+
+
+/* .input-box:has(#show10:checked) i.fa-eye-slash {
+  display: block;
+}
+.hidd {
+  width: 0;
+  height: 0;
+  visibility: hidden;
+} */
 * {
-  font-family: Poppins, "Open Sans", sans-serif;
-  font-weight: bold;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+.error{
+  animation: err .8s ease-in-out;
+  padding: 0 10px;
+  width: 350px;
+  height: 50px;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  border: 2px solid #de747f;
+  display: flex;
+  align-items: center;
+  background-color: #f4838d;
+  color: #000000;
+  border-radius: 5px;
+  margin: 20px auto;
+  font-family: sans-serif;
 }
 
-body::-webkit-scrollbar {
-  display: none;
+.error .icon {
+  margin-right: 10px;
+  font-size: 20px;
 }
-html {
-  scroll-behavior: smooth;
+.error .message{
+  font-size: 14px;
+}
+.error .close-btn {
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 20px;
+  margin-left: 20px;
+  color: #721c24;
 }
 body {
-  background-image: url("/static/images/back.jpg");
-}
-
-.main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
-  height: 400px;
-  font-family: "calibri";
+  background: linear-gradient(135deg, #222831, #393E46);
 }
 
-.centered-flex {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.form-container {
-  width: 400px;
-  height: 480px;
-  display: grid;
+.container {
+  overflow: hidden;
   position: relative;
-}
-
-.icon {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  width: 85px;
-  font-size: 50px;
-  display: grid;
-  height: 85px;
-  place-content: center;
-  border: 1px solid #2a2a2a;
-  z-index: 1;
-  justify-self: center;
-  border-radius: 50%;
-  background: #0e0e0e;
-}
-
-.fa {
-  color: #a2a2a2;
-}
-
-form {
-  flex-direction: column;
-  padding: 25px 25px 10px;
+  width: 850px;
+  height: 550px;
+  margin: 20px;
+  border: 2px solid #43abb4;
+  background-color: #2a2e37;
   border-radius: 30px;
-  background: rgba(19, 19, 19, 0.736);
-  border: 1px solid rgba(255, 255, 255, 0.097);
+  box-shadow: 0 0 20px #43abb4;
+}
+.form-box {
+  padding: 40px;
   position: absolute;
-  width: 100%;
-  bottom: 0;
-}
-
-.title {
-  position: relative;
-  margin: 40px 0;
-  font-size: 20px;
-  font-weight: bold;
-  color: white;
-}
-
-.msg {
-  color: #fa2929;
-  position: absolute;
-  top: 25%;
-}
-
-.field {
+  right: 0;
+  width: 50%;
+  height: 100%;
   display: flex;
-  position: relative;
-  width: 100%;
-}
-
-.field .fa {
-  position: absolute;
-  font-size: 14px;
-  right: 10px;
-  bottom: 10px;
-}
-
-input:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0 30px rgb(14 14 14) inset;
-}
-
-input:-webkit-autofill {
-  -webkit-text-fill-color: #bababa !important;
-}
-
-form input {
-  display: block;
-  outline: none;
-  width: 100%;
-  border: none;
-  font-size: 16px;
-  color: #d2d2d2;
-  margin: 25px 0 5px;
-  caret-color: #cccccc;
-  background: transparent;
-  padding: 10px 25px 3px 0;
-  border-bottom: 1px solid #404040;
-}
-
-.action {
-  justify-content: space-between;
-  width: 100%;
-  font-size: 14px;
-}
-
-.action label {
-  cursor: pointer;
-  color: #7d7d7d;
-}
-
-.action input {
-  width: auto;
-  margin: 0 8px 0 0;
-  cursor: pointer;
-}
-
-a {
-  text-decoration: none;
-  color: #9b9b9b;
-}
-
-.btn-container {
-  padding: 20px;
-  transition: 0.2s linear;
-}
-
-#login-btn {
-  padding: 5px 20px;
-  border: none;
-  background: rgb(25, 62, 97);
-  color: white;
-  font-weight: 600;
-  font-size: 16px;
-  border-radius: 15px;
-  transition: 0.3s;
-  margin: auto;
-}
-
-#login-btn:hover {
-  cursor: pointer;
-}
-
-.signup {
-  color: rgb(70, 70, 70);
-  margin-top: 10px;
-}
-
-.shift-left {
-  transform: translateX(-120%);
-}
-
-.shift-right {
-  transform: translateX(120%);
-}
-
-.shift-top {
-  transform: translateY(-150%);
-}
-
-.shift-bottom {
-  transform: translateY(150%);
-}
-
-.no-shift {
-  transform: translate(0%, 0%);
-}
-
-.error {
-  font-family: Arial;
-  display: flex;
+  /* background-color: #2a2e37; */
   align-items: center;
+  color: #333;
   text-align: center;
-  justify-content: center;
-  margin: auto;
-  margin-top: 15px;
+  z-index: 1;
+  transition: 0.6s ease-in-out 1.2s, visibility 0s 1s;
+}
+.container.active .form-box {
+  right: 50%;
+}
+.container.active .form-box.login {
+  visibility: visible;
 }
 
-.error__icon path {
-  fill: #fff;
+.container.active .form-box.register {
+  visibility: hidden;
 }
 
-.error__title {
-  font-weight: bold;
-  font-size: 14px;
-  color: #777171;
+.form-box.login {
+  visibility: hidden;
 }
-
-.error__icon {
-  width: 20px;
-  height: 20px;
+form {
+  width: 100%;
+}
+.container h1 {
+  color: #fff;
+  font-size: 36px;
+  margin: -10px 0;
+}
+.input-box {
   position: relative;
-  top: -2px;
+  margin: 30px 0;
+}
+.input-box input {
+  width: 100%;
+  padding: 13px 50px 13px 0;
+  background: transparent;
+  border: none;
+  outline: none;
+  border-bottom: 2px solid #fff;
+  font-size: 16px;
+  color: #fff;
+  font-weight: 500;
+  transition: .5s;
+}
+.input-box input:focus,
+.input-box input:valid{
+    border-bottom-color: #43abb4;
+}
+.input-box label{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    font-size: 16px;
+    color: #fff;
+    pointer-events: none;
+    transition: .5s;
+}
+.input-box i{
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  font-size: 20px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.input-box input:focus~label,
+.input-box input:valid~label{
+    top: -3px;
+    color: #43abb4;
+}
+
+.btn {
+  width: 100%;
+  height: 48px;
+  background: #43abb4;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  font-size: 16px;
+  border: none;
+  color: #fff;
+  font-weight: 600;
+}
+.toggle-box {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+.toggle-box::before {
+  content: "";
+  position: absolute;
+  left: -250%;
+  width: 300%;
+  height: 100%;
+  background-color: #43abb4;
+  border-radius: 150px;
+  z-index: 2;
+  transition: 1.8s ease-in-out;
+}
+.container.active .toggle-box::before {
+  left: 50%;
+}
+.toggle-panel {
+  z-index: 2;
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  transition: 0.6s ease-in-out;
+}
+.toggle-panel h1 {
+  margin-bottom: 10px;
+}
+.toggle-panel.toggle-right {
+  left: 0;
+  transition-delay: 1.2s;
+}
+.container.active .toggle-panel.toggle-right {
+  left: -50%;
+  transition-delay: 0.6s;
+}
+.toggle-panel.toggle-left {
+  right: -50%;
+  transition-delay: 0.6s;
+}
+.container.active .toggle-panel.toggle-left {
+  right: 0;
+  transition-delay: 1.2s;
+}
+.toggle-panel p {
+  margin-bottom: 20px;
+}
+.toggle-panel .btn {
+  width: 160px;
+  height: 46px;
+  background-color: transparent;
+  border: 2px solid #fff;
+  box-shadow: none;
+}
+@media screen and (max-width: 650px) {
+  .container {
+    height: calc(100vh - 40px);
+  }
+  .form-box {
+    bottom: 0;
+    width: 100%;
+    height: 70%;
+  }
+  .container.active .toggle-box::before {
+    left: 0;
+    top: 70%;
+  }
+  .container.active .form-box {
+    right: 0;
+    bottom: 30%;
+  }
+  .toggle-box::before {
+    left: 0;
+    top: -270%;
+    width: 100%;
+    height: 300%;
+    border-radius: 15vw;
+  }
+  .toggle-panel {
+    width: 100%;
+    height: 30%;
+  }
+  .toggle-panel.toggle-right {
+    top: 0;
+  }
+  .container.active .toggle-panel.toggle-right {
+    left: 0;
+    top: -30%;
+  }
+  .container.active .toggle-panel.toggle-left {
+    bottom: 0;
+  }
+  .toggle-panel.toggle-left {
+    right: 0;
+    bottom: -30%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .form-box {
+    padding: 20px;
+  }
+  .toggle-panel h1 {
+    font-size: 30px;
+  }
+}
+@keyframes err {
+  0% {
+    opacity: 0;
+    transform: translateX(500px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
