--- a/template/register.html
+++ b/template/register.html
@@ -3,54 +3,119 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="/static/images/meta.png" type="image/png" sizes="128x128">
+    <title>loginn</title>
     <link rel="stylesheet" href="/static/register.css">
-    <link rel="shortcut icon" href="/static/images/meta.png" type="image/x-icon">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
-    <div class="main-container centered-flex">
-        <div class="form-container">
-            <div class="icon fa fa-user"></div>
-            <form class="centered-flex" action="/registerAuth" method="post">
-                <div class="title">Sign Up</div>
-                <div class="msg"></div>
-                <div class="field">
-                    <input type="text" placeholder="Username" id="uname" name="username">
-                    <span class="fa fa-user"></span>
+    <div class="container">
+        {{if . }}
+        <div class="error">
+            <span class="icon">🚫</span>
+            <span class="message">Error: {{.}}</span>
+            <span class="close-btn" onclick="this.parentElement.style.display='none';">✖</span>
+        </div>
+        
+        {{end}}
+        <div class="form-box login">
+            <form action="/loginAuth" method="post">
+                <h1>Login</h1>
+                <div class="input-box">
+                    <input type="text"  required name="username">
+                    <label >Username</label>
+                    <i class='bx bxs-user'></i>
                 </div>
-                <div class="field">
-                    <input type="email" placeholder="email" id="uname" name="email">
-                    <span class="fa fa-user"></span>
-                </div>
-                <div class="field">
-                    <input type="password" placeholder="Password" id="pass" name="password">
-                    <span class="fa fa-lock"></span>
-                </div>
-                <div class="field">
-                    <input type="password" placeholder="Confirme Password " id="pass" name="firstpassword">
-                    <span class="fa fa-lock"></span>
-                </div>
-                <div class="action centered-flex">
-                    <label for="remember" class="centered-flex">
-                        <input type="checkbox" id="remember"> Remember me
-                    </label>
-                </div>
-                {{if . }}
-                <div class="error">
-                  
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" height="24" fill="none"><path fill="#393a37" d="m13 13h-2v-6h2zm0 4h-2v-2h2zm-1-15c-1.3132 0-2.61358.25866-3.82683.7612-1.21326.50255-2.31565 1.23915-3.24424 2.16773-1.87536 1.87537-2.92893 4.41891-2.92893 7.07107 0 2.6522 1.05357 5.1957 2.92893 7.0711.92859.9286 2.03098 1.6651 3.24424 2.1677 1.21325.5025 2.51363.7612 3.82683.7612 2.6522 0 5.1957-1.0536 7.0711-2.9289 1.8753-1.8754 2.9289-4.4189 2.9289-7.0711 0-1.3132-.2587-2.61358-.7612-3.82683-.5026-1.21326-1.2391-2.31565-2.1677-3.24424-.9286-.92858-2.031-1.66518-3.2443-2.16773-1.2132-.50254-2.5136-.7612-3.8268-.7612z"></path></svg>
-                    <div class="error__title">{{.}}</div>
-                </div>
-                
-                {{end}}
-
-                <div class="btn-container">
-                    <input type="submit" id="login-btn" value="sign up">
-                </div>
-                <div class="signup">Did you  have an Account?<a href="/login">Login</a></div>
+                <div class="input-box">
+                    <input type="password" required name="password">
+                    <label>Password</label>
+                    <i class="fa-regular fa-eye-slash hidden"></i>
+                    <i class="fa-regular fa-eye showen" style="display: none;"></i>
+                </div>                                                    
+                <button type="submit" class="btn">Login</button>
             </form>
         </div>
-</div>
+
+        <div class="form-box register">
+            <form action="/registerAuth" method="post">
+                <h1>Register</h1>
+                <div class="input-box">
+                    <input type="text"required name="username">
+                    <label >Username</label>
+                    <i class='bx bxs-user'></i>
+                </div>
+                <div class="input-box">
+                    <input type="email" required name="email">
+                    <label >Email</label>
+                    <i class='bx bxs-envelope'></i>       
+                </div>
+                <div class="input-box">
+                    <input type="password" required name="password">
+                    <label>Password</label>
+                    <i class="fa-regular fa-eye-slash hidden"></i>
+                    <i class="fa-regular fa-eye showen" style="display: none;"></i>
+                </div>  
+                <div class="input-box">
+                    <input type="password" required name="firstpassword">
+                    <label>Password</label>
+                    <i class="fa-regular fa-eye-slash hidden"></i>
+                    <i class="fa-regular fa-eye showen" style="display: none;"></i>
+                </div>  
+                <button type="submit" class="btn">Register</button>
+            </form>
+        </div>
+        <div class="toggle-box">
+            <div class="toggle-panel toggle-left">
+                <h1>Hello, Welcome!</h1>
+                <p>Don't have an account</p>
+                <button class="btn register-btn">Register</button>
+            </div>
+            <div class="toggle-panel toggle-right">
+                <h1>Welcome Back!</h1>
+                <p>Already have an account</p>
+                <button class="btn login-btn">Login</button>
+            </div>
+        </div>
+    </div>
 </body>
+<script>
+    // to make the form register or login active  (also make it desactive)
+    const container = document.querySelector('.container');
+    const registerBtn = document.querySelector('.register-btn');
+    const loginBtn = document.querySelector('.login-btn');
+    loginBtn.addEventListener('click',()=>{
+        container.classList.add('active');
+    });
+    registerBtn.addEventListener('click',()=>{
+        container.classList.remove('active');
+    });
+
+
+    // show password and hide it
+    document.addEventListener("DOMContentLoaded", () => {
+    const inputBoxes = document.querySelectorAll('.input-box');
+
+    inputBoxes.forEach(box => {
+        const input = box.querySelector('input[type="password"]');
+        const eyeSlash = box.querySelector('.hidden');
+        const eye = box.querySelector('.showen');
+
+        if (input && eyeSlash && eye) {
+            eyeSlash.addEventListener('click', () => {
+                input.type = 'text';
+                eyeSlash.style.display = 'none';
+                eye.style.display = 'block';
+            });
+
+            eye.addEventListener('click', () => {
+                input.type = 'password';
+                eye.style.display = 'none';
+                eyeSlash.style.display = 'block';
+            });
+        }
+    });
+});
+
+</script>
 </html>
