like and dislike

--- a/template/home.html
+++ b/template/home.html
@@ -56,8 +56,7 @@
             <button class="Btn" type="submit">
               <div class="sign">
                 <svg viewBox="0 0 512 512">
-                  <path
-                    fill="white"
+                  <path fill="white"
                     d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z">
                   </path>
                 </svg>
@@ -106,14 +105,16 @@
           {{if $.Session}}
           <form action="/reaction" method="post">
             <div class="reaction">
-              <span  class="span-like  {{if eq .UserReactionPosts 1}}active-like{{end}}" >{{.TotalLikes}}</span>
-              <button name="reaction" value="1" class="like-btn  {{if eq .UserReactionPosts 1}}active-like{{end}}" type="submit" >
+              <span class="span-like  {{if eq .UserReactionPosts 1}}active-like{{end}}">{{.TotalLikes}}</span>
+              <button name="reaction" value="1" class="like-btn  {{if eq .UserReactionPosts 1}}active-like{{end}}"
+                type="submit">
                 <i class="fa-regular fa-thumbs-up"></i>
               </button>
             </div>
             <div class="reaction">
               <span class="span-dislike {{if eq .UserReactionPosts -1}}active-dislike{{end}}">{{.TotalDislikes}}</span>
-              <button name="reaction" value="-1" class="dislike-btn  {{if eq .UserReactionPosts -1}}active-dislike{{end}}" type="submit">
+              <button name="reaction" value="-1"
+                class="dislike-btn  {{if eq .UserReactionPosts -1}}active-dislike{{end}}" type="submit">
                 <i class="fa-regular fa-thumbs-down"></i>
               </button>
             </div>
@@ -163,17 +164,20 @@
                 <div class="comment-reactions">
                   <form action="/CommentsLike " method="post">
                     <div class="reaction">
-                      <span>{{.TotalLikes}}</span>
-                      <button name="reaction" value="1" class="like-btn {{if eq .UserReactionComment 1}}active-like{{end}}" type="submit">
+                      <span class="span-like  {{if eq .UserReactionComment 1}}active-like{{end}}">{{.TotalLikes}}</span>
+                      <button name="reaction" value="1"
+                        class="like-btn {{if eq .UserReactionComment 1}}active-like{{end}}" type="submit">
                         <i class="fa-regular fa-thumbs-up"></i>
                       </button>
                     </div>
                     <div class="reaction">
-                      <span>{{.TotalDislikes}}</span>
-                      <button name="reaction" value="-1" class="dislike-btn {{if eq .UserReactionComment -1}}active-dislike{{end}}" type="submit">
+                      <span
+                        class="span-dislike {{if eq .UserReactionComment -1}}active-dislike{{end}}">{{.TotalDislikes}}</span>
+                      <button name="reaction" value="-1"
+                        class="dislike-btn {{if eq .UserReactionComment -1}}active-dislike{{end}}" type="submit">
                         <i class="fa-regular fa-thumbs-down"></i>
                       </button>
-                    </div>                    
+                    </div>
                     <input type="hidden" name="userId" value="{{$userId}}" />
                     <input type="hidden" name="commentID" value="{{.Id}}" />
                   </form>
