--- a/static/home.css
+++ b/static/home.css
@@ -347,7 +347,7 @@ body:has(#commentshow:checked) .post-time {
   background-color: var(--wahd);
 }
 
-.postform form .categorie {
+.postform form .categorie  {
   display: flex;
   flex-wrap: wrap;
   margin: auto;
@@ -449,4 +449,101 @@ body:has(#post-toggle:checked) .allPost {
 }
 .deslike{
   color: red;
+}
+
+
+
+.filter .categorie{
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  width: 90%;
+  gap: 15px;
+}
+
+.filter .tag-check+.tagC{
+  background-color: var(--wahd);
+  color: white;
+}
+
+.filter{
+   animation: 0.8s postAn ease-in-out;
+  display: none;
+  width: 500px;
+  height: 400px;
+  box-shadow:0 4px 15px rgb(67 171 180 / 38%);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: fixed;
+  color: white;
+  flex-direction: column;
+  background-color: #2d3039;
+  text-align: center;
+  border-radius: 15px;
+}
+
+
+
+body:has(#menu-toggle1:checked) .filter {
+  display: block;
+}
+
+.tag-check:checked+.tagC {
+  background-color: var(--wahd);
+  color: white;
+}
+
+
+
+
+.filter form input {
+  outline: none;
+  background-color: transparent;
+  color: white;
+  padding: 0 0 0 10px;
+  width: 90%;
+  height: 50px;
+  border-radius: 10px;
+  border: 1px solid gray;
+  margin-bottom: 10px;
+  margin-top: 15px;
+}
+
+.filter form input:focus {
+  border: 2px solid var(--wahd);
+}
+
+.filter form textarea {
+  outline: none;
+  color: white;
+  background-color: transparent;
+  resize: none;
+  padding: 25px 0 0 10px;
+  width: 90%;
+  height: 70px;
+  border-radius: 10px;
+  border: 1px solid gray;
+  margin-bottom: 30px;
+}
+
+.filter form textarea:focus {
+  border: 2px solid var(--wahd);
+}
+
+.filter form .btnform {
+  font-weight: bold;
+  cursor: pointer;
+  width: 90%;
+  height: 40px;
+  color: white;
+  background-color: var(--wahd);
+}
+
+.filter form .categorie  {
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  width: 90%;
+  gap: 15px;
 }
