--- a/template/home.html
+++ b/template/home.html
@@ -210,7 +210,7 @@
     {{end}}
   </div>
   {{else}}
-  <h1 class="messageErr">No found posts with this categorie 🤷‍♂️</h1>
+  <h1 class="notfound">No  posts found with this categorie 🤷‍♂️</h1>
   {{end}}
 </body>
 <script>
