--- a/template/home.html
+++ b/template/home.html
@@ -44,12 +44,13 @@
             <input type="submit" value="Create Post" class="btnform" /><br />
           </form>
         </div>
-        {{ else }}
         <div  class="filter">
           <form action="/myPosts" method="post">
+            <input type="hidden" name="session" value="{{.UserActive}}">
           <button type="submit"  class="filterbtn">My posts</button>
           </form>
           <form action="/likedPosts" method="post">
+            <input type="hidden" name="session" value="{{.UserActive}}">
             <button type="submit"  class="filterbtn">Liked Posts</button>
           </form>
           <form action="/filter" method="post">
