--- a/template/home.html
+++ b/template/home.html
@@ -45,9 +45,9 @@
           </form>
         </div>
         {{end}}
+        {{if .Session}}
         <div class="filter">
           <h1>Filter</h1>
-          {{if .Session}}
           <form action="/myPosts" method="post" class="form1">
             <h4>Filter by myPosts</h4>
             <button type="submit" class="filterbtn">My posts</button>
@@ -56,9 +56,22 @@
             <h4>Filter by likedPosts</h4>
             <button type="submit" class="filterbtn">Liked Posts</button>
           </form>
-          {{end}}
           <form action="/filter" method="post" class="form3">
             <h4>Filter By Categorie</h4>
+            <div class="categorie">
+              {{ range .Categories}}
+              
+              <input type="checkbox" id="tagg{{.Id}}" class="tag" name="tags" value="{{.Id}}" hidden>
+              <label for="tagg{{.Id}}" class="tagCategorie">{{.Name}}</label>
+              {{end}}
+            </div>
+            <button type="submit" class="filterbtn">filter</button>
+          </form>
+        </div>
+        {{else}}
+        <div class="filter">
+          <h2>Filter By Categorie</h2>
+          <form action="/filter" method="post" class="form3">
             <div class="categorie">
               {{ range .Categories}}
 
@@ -69,6 +82,7 @@
             <button type="submit" class="filterbtn">filter</button>
           </form>
         </div>
+        {{end}}
         {{if .Session}}
         <input type="checkbox" id="toggle-menu" class="hidd" />
         <label for="toggle-menu" class="avatar-label">
