--- a/static/home.css
+++ b/static/home.css
@@ -54,13 +54,18 @@ body {
   margin: 16px auto;
   border-radius: 12px;
   width: 760px;
-  height: 400px;
   background: linear-gradient(135deg, #43abb4, #5baab3c9);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border-radius: 20px;
   border: 1px solid rgba(255, 255, 255, 0.18);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+}
+.post-card .image{
+  margin-bottom: 10px;
+  border-radius: 15px;
+  width: 70%;
+  height: 250px;
 }
 
 .first-part {
@@ -69,12 +74,12 @@ body {
 
 .second-part {
   animation: 0.5s linear second-part;
-  max-height: 100%;
+  max-height: 500px;
   overflow: auto;
   border-radius: 10px;
   box-shadow: 0px 0px 20px rgb(45 49 58);
   padding: 12px 0;
-  height: 100%;
+  height: 500px;
   display: flex;
   flex-direction: column;
   display: none;
@@ -346,7 +351,6 @@ body:has(#commentshow:checked) .post-time {
   animation: 0.5s postAn ease-in-out;
   display: none;
   width: 500px;
-  height: 400px;
   box-shadow: 0 4px 15px rgb(67 171 180 / 38%);
   top: 50%;
   left: 50%;
@@ -398,6 +402,7 @@ body:has(#commentshow:checked) .post-time {
 }
 
 .postform form .btnform {
+  margin-bottom: 15px;
   font-size: 16px;
   border: 1px solid;
   font-weight: bold;
@@ -420,7 +425,8 @@ body:has(#commentshow:checked) .post-time {
   gap: 15px;
 }
 
-.tagC,.tagCategorie {
+.tagC,
+.tagCategorie {
   border: 2px solid var(--wahd);
   padding: 5px 0;
   width: 100px;
@@ -531,7 +537,8 @@ body:has(#post-toggle:checked) .allPost {
   text-align: center;
   border-radius: 15px;
 }
-.filter h1 ,.filter h2{
+.filter h1,
+.filter h2 {
   margin: 10px 0;
   color: #04dbf1;
 }
@@ -592,7 +599,8 @@ body:has(#filter-toggle:checked) .allPost {
   box-shadow: 0 0 10px #00adb5;
   border-radius: 10px;
 }
-.filter .form1 .filterbtn,.filter .form2 .filterbtn{
+.filter .form1 .filterbtn,
+.filter .form2 .filterbtn {
   font-size: 18px;
   border: 1px solid;
   font-weight: bold;
@@ -605,4 +613,4 @@ body:has(#filter-toggle:checked) .allPost {
   border: none;
   box-shadow: 0 0 10px #00adb5;
   border-radius: 10px;
-} 
+}
