--- a/template/home.html
+++ b/template/home.html
@@ -28,7 +28,7 @@
         <label for="post-toggle" class="postbtn">Create post</label>
         <div class="postform">
           <h2>Create Post</h2>
-          <form action="/createPost" method="post">
+          <form action="/createPost" method="post" enctype="multipart/form-data">
             <input type="text" name="title" placeholder="Title" required /><br />
             <textarea name="description" placeholder="Content" required></textarea><br />
             <div class="categorie">
@@ -39,6 +39,9 @@
               <label for="tag{{.Id}}" class="tagC">{{.Name}}</label>
               {{end}}
 
+            </div>
+            <div class="upload">
+              <input type="file" name="myFile" />
             </div>
             <br />
             <input type="submit" value="Create Post" class="btnform" /><br />
@@ -139,12 +142,18 @@
           <span class="tag">{{.Name}}</span>
           {{end}}
         </div>
+        {{if .ImagePath}}
+          <img src="/uploads/{{.ImagePath}}"  class="image">
+        {{else}}
+          <img src="/static/images/notfound.png" alt="Image not found" class="image">
+        {{end}}
+
 
         <p class="post-description">{{.Description}}</p>
 
         <div class="post-reactions">
 
-          <form action="/reaction" method="post">
+          <form action="/reaction" method="post" >
             <div class="reaction">
               <span class="span-like  {{if eq .UserReactionPosts 1}}active-like{{end}}">{{.TotalLikes}}</span>
               <button name="reaction" value="1" class="like-btn  {{if eq .UserReactionPosts 1}}active-like{{end}}"
