--- a/static/home.css
+++ b/static/home.css
@@ -40,7 +40,7 @@ body {
 }
 
 .allPost {
-  width: 85%;
+  width: 75%;
   margin: auto;
   display: flex;
   margin: 100px auto 0 auto;
@@ -53,17 +53,17 @@ body {
   color: #fff;
   padding: 24px;
   border-radius: 10px;
-  width: 1000px;
+  width: 800px;
   background: linear-gradient(135deg, #43abb4, #5baab3c9);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.18);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
-  margin: 10px 400px;
+  margin: 10px 350px;
 }
 .post-card .image {
-  margin-bottom: 10px;
-  border-radius: 15px;
+  margin-bottom: 5px;
+  border-radius: 10px;
   width: 70%;
   height: 250px;
 }
@@ -74,12 +74,12 @@ body {
 
 .second-part {
   animation: 0.5s linear second-part;
-  max-height: 500px;
+  max-height: 100%;
   overflow: auto;
   border-radius: 10px;
   box-shadow: 0px 0px 20px rgb(45 49 58);
   padding: 12px 0;
-  height: 500px;
+  height: 350px;
   display: flex;
   flex-direction: column;
   display: none;
@@ -231,11 +231,11 @@ body:has(#commentshow:checked) .post-time {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 16px;
+  margin-bottom: 5px;
 }
 
 .user-info {
-  margin-bottom: 15px;
+  margin-bottom: 5px;
   display: flex;
   align-items: center;
   gap: 8px;
@@ -255,14 +255,14 @@ body:has(#commentshow:checked) .post-time {
 
 .post-title {
   font-size: 1.2rem;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .post-tags {
   display: flex;
   flex-wrap: wrap;
   gap: 0.5rem;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .tag {
@@ -275,13 +275,12 @@ body:has(#commentshow:checked) .post-time {
 
 .post-description {
   font-size: 17px;
-  margin-bottom: 16px;
   color: #fff5f5fb;
 }
 
 .post-reactions form {
   display: flex;
-  margin-top: 40px;
+  margin-top: 20px;
   gap: 30px;
   align-items: center;
 }
@@ -620,7 +619,7 @@ body:has(#filter-toggle:checked) .allPost {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   position: fixed;
   top: 100px;
-  left: 200px;
+  left: 220px;
   width: 270px;
   height: 80vh;
   padding: 20px;
@@ -631,7 +630,7 @@ body:has(#filter-toggle:checked) .allPost {
   border-radius: 8px;
   position: fixed;
   top: 100px;
-  right: 200px;
+  right: 240px;
   width: 270px;
   height: 80vh;
   padding: 50px;
