--- a/template/home.html
+++ b/template/home.html
@@ -125,7 +125,7 @@
       <div class="forum-card">
         <h2>Our Forum is a community of<br><span>active and passionate members</span></h2>
         <p>Join to ask questions, share knowledge, and grow together.</p>
-        <a href="/signup" class="btn">Create account</a>
+        <a href="/register" class="btn">Create account</a>
         <a href="/login" class="login-link">Log in</a>
       </div>
     </aside>
