--- a/template/home.html
+++ b/template/home.html
@@ -138,26 +138,25 @@
           <div class="user-info">
             <img src="https://robohash.org/{{.Username}}.png?size=50x50" class="avatar" />
             <span class="username">{{.Username}}</span>
-            <span class="hdah">{{.TimeFormatted}}</span>
           </div>
           <span class="post-time">{{.TimeFormatted}}</span>
         </div>
 
         <h2 class="post-title">{{.Title}}</h2>
 
-        <div class="post-tags">
-
-          {{range .Categories}}
-          <span class="tag">{{.Name}}</span>
-          {{end}}
-        </div>
+        
         {{if .ImagePath}}
         <img src="/uploads/{{.ImagePath}}" class="image">
         {{end}}
 
 
         <p class="post-description">{{.Description}}</p>
+        <div class="post-tags">
 
+          {{range .Categories}}fa-solid
+          <span class="tag">{{.Name}}</span>
+          {{end}}
+        </div>
         <div class="post-reactions">
 
           <form action="/reaction" method="post">
@@ -183,32 +182,26 @@
                 #post-{{.Id}}:has(#commentshow-{{.Id}}:checked) .second-part {
                   display: flex;
                 }
-                #post-{{.Id}}:has(#commentshow-{{.Id}}:checked) .post-time {
-                  display: none;
-                }
-                #post-{{.Id}}:has(#commentshow-{{.Id}}:checked) .hdah {
-                  display: block;
-                }
               </style>
             </div>
             <input type="hidden" name="postID" value="{{.Id}}" />
           </form>
         </div>
+        
       </div>
+      
       <div class="second-part" id="post-{{.Id}}">
         {{if $.Session}}
         <div class="comment">
           <form action="/comment" method="post">
             <input type="hidden" name="postID" value="{{.Id}}" />
             <img src="https://robohash.org/{{$.UserActive}}.png?size=50x50" />
-            <input type="text" name="comment" placeholder="Add Comment" required /><br />
+            <input type="text" name="comment" placeholder="Add Comment" required />
             <button type="submit">Add</button>
           </form>
-          <hr />
         </div>
         {{end}} {{if gt (len .Comments) 0}}
         <div class="commentaires">
-          <h3>Comments</h3>
           {{range .Comments}}
           <div class="comments">
             <img src="https://robohash.org/{{.Username}}.png?size=50x50" />
@@ -244,6 +237,7 @@
           </div>
           {{end}}
         </div>
+        
         {{else}}
         <h1 class="messageErr">No Commentaires 🤷‍♂️</h1>
         {{end}}
@@ -258,6 +252,7 @@
       </div>
       {{end}}
     </aside>
+  </div>
   </div>
   {{else}}
   <h1 class="notfound">No posts found 🤷‍♂️</h1>
